--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,96 @@
-/* место для вашего кода */
+
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items:start;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  width: 1100px;
+  height: 293px;
+  background-color: white;
+  color:black;
+}
+
+.header__menu {
+  display: flex;
+  justify-content: space-between;
+  margin: 133px 36.5px 138px 50px;
+}
+
+.header__links-list{
+  display: flex;
+  margin: 0;
+  gap: 32px;
+}
+
+.header__links-list-item {
+  list-style-type: circle; 
+  border-bottom: 1px black solid;
+  margin-right: 1px;
+}
+
+.header__links-list .header__links-list-item_no-bullit {
+  list-style: none;
+  border-bottom: 0;
+}
+
+.link {
+  text-decoration: none;
+}
+
+.header__logo {
+  display: block;
+  width: 137px;
+  margin-top: 92px;
+}
+
+.header__logo-image {
+  width: 100%;
+
+}
+
+.address {
+  justify-self: end;
+  align-self: center;
+  margin-right: 50px;
+  font-style: normal;
+  min-width: 240px;
+  line-height: 24px;
+  margin-bottom: 5px;
+}
+
+.address__link {
+  text-decoration: none;
+  border-bottom: 1px black solid;
+}
+
+.cover {
+
+}
+
+.description {
+
+}
+
+.lots {
+
+}
+
+.lots__card-list {
+
+}
+
+
+.about {
+
+}
+
+.about__title {
+
+}
+
+.footer {
+
+}
