--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,9 @@
   font-weight: 400;
   width: 1100px;
   height: 293px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
   background-color: white;
   color:black;
 }
@@ -22,18 +25,20 @@
 .header__links-list{
   display: flex;
   margin: 0;
-  gap: 32px;
+  gap: 30px;
 }
 
 .header__links-list-item {
   list-style-type: circle; 
-  border-bottom: 1px black solid;
-  margin-right: 1px;
+  text-decoration: underline;
+  text-decoration-thickness: 0.3px;
+  text-underline-offset: 0.2em;
+  padding-left: 3px;
 }
 
 .header__links-list .header__links-list-item_no-bullit {
   list-style: none;
-  border-bottom: 0;
+
 }
 
 .link {
@@ -42,8 +47,10 @@
 
 .header__logo {
   display: block;
-  width: 137px;
+  width: 139px;
+  height: 105px;
   margin-top: 92px;
+  padding: 1px 1px 0 2px;
 }
 
 .header__logo-image {
@@ -54,43 +61,327 @@
 .address {
   justify-self: end;
   align-self: center;
-  margin-right: 50px;
-  font-style: normal;
   min-width: 240px;
-  line-height: 24px;
+  margin-right: 50px;
   margin-bottom: 5px;
+  padding-top: 1px;
+  padding-left: 1px;
+  font-style: normal;
+  line-height: 24.3px;
+
 }
 
 .address__link {
-  text-decoration: none;
-  border-bottom: 1px black solid;
+  text-decoration: underline;
+  text-decoration-thickness: 0.3px;
+  text-underline-offset: 0.2em;
 }
 
 .cover {
-
+  position: absolute;
+  z-index: -1;
+  width: 1100px;
+  height: 757px;
+  color: white;
+  font-family: "Raleway", sans-serif;
+  background: url(../images/cover.jpg) no-repeat center / cover;
 }
 
-.description {
+.overlay {
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0 0 0/0.6);
+}
 
+.cover__title {
+  position: absolute;
+  z-index: 1;
+  display: flex;
+  gap: 18px;
+  width: 1000px;
+  height: 385px;
+  margin: 165px 50px 106px;
+  font-weight: 700;
+  font-size: 100px;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  position: relative;
+  bottom: 1px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-left: 1px;
+  letter-spacing: 30px;
+}
+
+.aligned-text_center {
+  position: relative;
+  right: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 30px;
+}
+
+.aligned-text_right {
+  position: relative;
+  top: 1px;
+  right: 107px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  letter-spacing: 30px;
+}
+
+.cover__description {
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1000px;
+  height: 51px;
+  margin: 656px 50px 50px;
+  font-weight: 400;
+  font-size: 22px;
+}
+
+.cover__description-text {
+  padding-top: 1px;
+  text-transform: uppercase;
+  word-spacing: 18.5px;
+}
+
+.button {
+  position: relative;
+  z-index: 100;
+  width: 256px;
+  height: 51px;
+  border: 1px white solid;
+  color: white;
+  text-transform: uppercase;
+  background: transparent;
+  cursor: pointer;
 }
 
 .lots {
+  position: absolute;
+  margin: 937px 24px 120px;
+}
 
+.lost__header {
+  margin-bottom: 27px;
+  padding-left: 40px;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 .lots__card-list {
-
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap: 25px;
 }
 
+.lots__card-list-item {
+  width: 334px;
+  min-height: 596px;
+  color: white;
+  list-style-type: none;
+}
 
+.card-link {
+  height: 100%;
+}
+
+.card {
+  display: grid;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.overlay__card {
+  position: absolute;
+  z-index: 0;
+  width: 334px;
+  height: 596px;
+  background-color: rgba(0 0 0/0.6);
+}
+
+.card_type_film {
+  background: url(../images/card-lot-01.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_book {
+  background: url(../images/card-lot-02.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card_type_picture {
+  background: url(../images/card-lot-03.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card__title {
+  width: 254px;
+  margin-left: 40px;
+  padding-top: 49px;
+  font-weight: 700;
+  font-size: 22px;
+  text-decoration: underline;
+  text-transform: uppercase;
+}
+
+.card__text {
+  position: relative;
+  width: 254px;
+  margin-left: 40px;
+  font-size: 20px;
+}
+
+.card__text-film {
+  margin-top: 230px;
+}
+
+.card__text-book {
+  margin-bottom: 10px;
+}
+
+.card__text-picture {
+  margin-top: 83px;
+}
+
+.lots__look-more-link {
+  display: grid;
+  align-items: center;
+  width: 192px;
+  margin-top: 30px;
+  margin-left: 40px;
+  border-bottom: 1px black solid;
+  font-size: 20px;
+  text-decoration: none;
+}
 .about {
+  position: absolute;
+  display: grid;
+  grid-template-columns: [start] 334px [line2] 693px [end];
+  gap: 25px;
+  width: 1052px;
+  height: 595px;
+  margin: 1780px 24px 180px;
+}
 
+.about__logo {
+  display: block;
+  width: 240px;
+  height: 240px;
+  margin-top: 35px;
+  margin-left: 48px;
+  border-radius: 240px;
+  background: #000;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+  margin-top: 64px;
+  margin-left: 46.5px;
+}
+
+.about__content {
+  margin-top: 136px;
 }
 
 .about__title {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: uppercase;
+}
 
+.about__text {
+  position: relative;
+  font-weight: 400;
+  font-size: 20px;
+}
+.about__text-paragraph {
+  width: 688px;
+  padding-top: 100px;
+}
+
+.about__text-paragraph-secondare {
+  width: 100%;
+  padding-top: 24px;
 }
 
 .footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 1100px;
+  height: 180px;
+  margin-top: 2555px;
+  font-size: 18px;
+}
 
+.address__footer {
+  justify-self: start;
+  gap: 10px;
+  margin-top: 1px;
+  margin-left: 51px;
+  font-style: normal;
+  line-height: 24px;
+}
+
+.address__link-footer {
+  text-decoration: underline;
+  text-decoration-thickness: 0.9px;
+  text-underline-offset: 0.2em;
+}
+
+.footer__menu {
+  justify-self: center;
+  margin-top: 1px;
+  margin-left: 1px;
+  text-align: center;
+}
+
+.footer__links-list {
+  list-style-type: none;
+}
+
+.footer__links-list-item {
+  text-decoration: underline;
+  text-decoration-thickness: 0.9px;
+  text-underline-offset: 0.2em;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__menu-link {
+  text-decoration: none;
+}
+
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  gap: 48px;
+  margin-top: 1px;
+  margin-left: 77px;
+  list-style-type: none;
+}
+
+.footer__social-list-item {
+  width: 48px;
 }
